BugFix: textarea overflows container when stretched

--- a/client/src/features/createBlogPost/components/BlogPostForm.styles.sass
+++ b/client/src/features/createBlogPost/components/BlogPostForm.styles.sass
@@ -4,7 +4,7 @@
     background-color: white
     width: 60%
     border-radius: 15px
-    height: 80vh
+    min-height: 50vh
     display: flex
     flex-direction: column
     gap: 2vh
@@ -23,7 +23,7 @@
         input
             height: 30px
         textarea
-            height: 20vh
+            height: 50vh
             resize: vertical
         input,textarea
             width: 100%
